# filament-rs

./: .gitmodules  Cargo.toml
examples/: basic.rs  texture_unlit.filamat  texture_unlit.mat
generator/: Cargo.toml
generator/src/: main.rs
src/: buffers.rs  camera.rs  engine.rs  entity_manager.rs  lib.rs  material.rs  renderable.rs  renderer.rs  scene.rs  swapchain.rs  texture.rs  transform.rs  view.rs
sys/: Cargo.toml  build.rs
sys/src/: bindings.rs  lib.rs
sys/src/cpp/: helpers.cpp  helpers.h  materials.cpp  materials.h  renderable_manager.cpp  renderable_manager.h  tests.cpp  tests.h
