[package]
name = "filament"
version = "0.0.1-alpha.1"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jaynus/filament-rs"
description = "Rusty bindings for google filament rendering engine"

[dependencies]
filament-sys = { path = "sys" }
log = "0.4"
thiserror = "1.0"
bitflags = "1.2"
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
env_logger = "0.7"
winit = "0.22"

[workspace]
members = [ "sys", "generator" ]