[package]
name = "filament-generator"
version = "0.0.1-alpha.1"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jaynus/filament-rs"
description = "Bindings generator for filament-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
bindgen = "0.53"
