[package]
name = "filament-sys"
version = "0.0.1-alpha.1"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jaynus/filament-rs"
description = "Raw system crate for filament-rs"

[dependencies]
log = "0.4"

[build-dependencies]
cmake = "0.1"
cc = { version = "1.0", features = ["parallel"] }